# LeapMotion3DScanner

./: .gitignore  CMakeLists.txt  README.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
Calibration/: Leap Calibration.cpp  Stereo  Calibration.cpp  hp Cam calibration.cpp
Cloud Visualizer/: CMakeLists.txt
Disparity/: disparity.cpp
build-tests/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  scanner_math_tests
build-tests/Testing/Temporary/: CTestCostData.txt
codes/: Depth.cpp  Filter.cpp  Leap loop images.cpp  Leap manual images.cpp  PCL.cpp  calib.cpp  disparity.cpp  dist_nocalibr.cpp  distortion Map.cpp  resize.cpp  undistort.cpp
common/: scanner_math.cpp  scanner_math.h
final code/: fypCode.cpp  mainGUI.cpp
tests/: CMakeLists.txt  test_scanner_math.cpp
